# exit_speed

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .pytype.cfg  .travis.yml  MANIFEST.in  README.md  WORKSPACE  accelerometer.py  accelerometer_test.py  cleanup_timescale.py  common_flags.py  common_lib.py  common_lib_test.py  compile_protobuf.sh  config.yaml  config_lib.py  convert_data_to_csv.py  convert_old_data_to_tf.py  csv_lib.py  data_logger.py  data_logger_test.py  data_reader.py  exit_speed.py  exit_speed_test.py  find_closest.py  fix_2_data.py  gcs_archive.py  go.mod  go.sum  gopro.py  gopro_test.py  gps.pb.go  gps.proto  gps_pb2.py  gyroscope.py  gyroscope_test.py  honda.yaml  labjack.py  labjack_test.py  (+37 more)
.github/workflows/: codeql-analysis.yml
dashboard/: app.py  app.yaml  db_conn.py  index.py  instance_manager.py  instance_mganager.py  lap_comparison.py  live.py  main.py  queries.py  requirements.txt  secret_manager.py
docs/: Timescale.md  TireInfraredSensors.md
etc/: corrado.yaml  exit_speed.service  exit_speed_dash.service  exit_speed_live.service  honda.yaml  lf_tire_sensor.service
exit_speed/: BUILD  __init__.py  accelerometer.py  accelerometer_test.py  cleanup_postgres.py  cleanup_timescale.py  common_lib.py  common_lib_test.py  config_lib.py  convert_data_to_csv.py  convert_data_to_exit_speed_proto.py  csv_lib.py  data_logger.py  data_logger_test.py  exit_speed.proto  exit_speed_pb2.py  exit_speed_test.py  gps.proto  gps_pb2.py  gps_sensor.py  gps_sensor_test.py  gyroscope.py  gyroscope_test.py  import_data.py  import_data_test.py  labjack.py  labjack_test.py  lap_lib.py  lap_lib_test.py  leds.py  leds_test.py  main.py  main_test.py  postgres.py  postgres_schema.sql  postgres_test.py  postgres_test_lib.py  replay_data.py  replay_data_test.py  requirements_lock.txt  (+12 more)
exit_speed/dashboard/: README.md  app.yaml  db_conn.py  instance_manager.py  live.py  main.py  queries.py  requirements.txt  secret_manager.py
exit_speed/grafana/: corrado_live.py  dashboard_generator.py  honda_live.json  honda_live.py  update_grafana.py
exit_speed/testdata/: 2021-03-28T10:29:1.200000_1.data  2021-03-28T10:29:1.200000_split_1.data  PIR_race_10hz_gps_only_2020-06-20_1.data  PIR_race_10hz_gps_only_2020-06-21_1.data  test_config.yaml  test_labjack_config.yaml  test_parking_lot_20hz_2020-06-11T22_1.data  test_postgres.yaml  three_qual_laps_1.data  three_qual_laps_split_1.data  timescale_schema
exit_speed/testdata/Bug/Test Parking Lot/2020-06-11T22:00:00/: GpsSensor_1.data
exit_speed/tracks/: BUILD  __init__.py  area27.py  oregon_raceway_park.py  pacific_raceways.py  portland_internal_raceways.py  spokane_raceway.py  test_track.py  the_ridge.py
gps_go_proto/: gps.pb.go
reflector/: main.go  reflector.go  reflector_test.go
reflector_go_proto/: reflector.pb.go  reflector_grpc.pb.go
src/: exit_speed
testdata/: PIR_race_10hz_gps_only_2020-06-21.tfr  data-2019-08-18T16:53:01.250Z.tfr.csv  data-2020-06-11T22:16:27.700Z  data-2020-06-11T22:16:27.700Z.tfr.csv  test_config.yaml  test_labjack_config.yaml  test_parking_lot_20hz_2020-06-11T22.trf  timescale_schema
tracks/: __init__.py  area27.py  base.py  oregon_raceway_park.py  pacific_raceways.py  portland_internal_raceways.py  spokane_raceway.py  test_track.py  the_ridge.py
(+3 files in other folders)
