#!/usr/bin/python3
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[metadata]
name = exit_speed
description = Race car telemetry with a Raspberry Pi
version = attr:exit_speed.__version__
author = Douglas Hedges
author_email = djhedges+exit-speed@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/djhedges/exit_speed
project_urls =
  Travis CL = https://app.travis-ci.com/github/djhedges/exit_speed
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.7
install_requires =
  absl-py>=0.10.0
  gps>=3.19
  protobuf>=3.12.2
  pygatt>=4.0.5
  python-geohash>=0.8.5
  PyYAML>=5.4

[options.extras_require]
  adafruit-circuitpython-busdevice>=4.3.1
  adafruit-circuitpython-dotstar>=2.0.0
  adafruit-circuitpython-fxas21002c>=2.1.5
  adafruit-circuitpython-fxos8700>=2.1.4
  Cython>=0.29.21
  dash>=2.0.0
  dash-core-components>=2.0.0
  dash-html-components>=2.0.0
  dash-table>=5.0.0
  google-cloud-storage>=1.43.0
  grafanalib>=0.6.1
  grpcio>=1.18.0
  LabJackPython>=2.0.0
  matplotlib>=3.0.2
  mlx9064x-driver>=1.3.0
  numpy>=1.21.0
  pandas>=0.23.3
  plotly>=5.4.0
  psycopg2>=2.7.7
  RPi.GPIO>=0.7.0
  scikit-learn>=0.20.2
  scipy>=1.4.1
  sdnotify>=0.3.2
  smbus2>=0.4.1

[options.packages.find]
exclude =
  etc*
  docs*
